feat(config): 将user_agent配置改为user_agents列表并实现随机选择
- 在config.yaml中将单一user_agent改为user_agents列表，包含多个浏览器标识
- 在directory_buster.py中导入random模块并实现随机选择user_agent功能
- 在vulnerability_scanner.py中导入random模块并实现随机选择user_agent功能
- 更新所有默认配置中的user_agent为user_agents数组格式
- 修改README.md文档中的配置示例以匹配新的user_agents格式

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,8 +12,16 @@ scanning:
   # 延迟（秒）
   delay: 0.1
   
-  # User-Agent
-  user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+  # User-Agent列表
+  user_agents:
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/115.0"
+    - "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
+    - "Mozilla/5.0 (iPhone; CPU iPhone OS 17_1_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.1 Mobile/15E148 Safari/604.1"
+    - "Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"
+    - "Mozilla/5.0 (compatible; Bingbot/2.0; +http://www.bing.com/bingbot.htm)"
+    - "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Edg/120.0.0.0"
   
   # 代理配置（可选）
   proxy: null  # 例如: "http://127.0.0.1:8080"
